# 4_OOP_homework

./: .flake8  .gitignore  14.1_main.py  14.2_main.py  15.1_main.py  README.md  pyproject.toml  requirements.txt
htmlcov/: index.html
src/: category.py  category_iterator.py  data_loader.py  product.py
tests/: conftest.py  test_category.py  test_category_iterator.py  test_data_loader.py  test_product.py
