[tool.poetry]
name = "4-oop-homework"
version = "0.1.0"
description = ""
authors = ["viktor <lav.diz@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pandas = "^2.2.3"
openpyxl = "^3.1.5"
flask = "^3.1.0"
optional = "^0.0.1"
colorlog = "^6.9.0"
numpy = "^2.2.2"
werkzeug = "^3.1.3"
jinja2 = "^3.1.5"
typing-extensions = "^4.12.2"
pytz = "^2025.1"
Markdown = "^3.7"
python-docx = "^1.1.2"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.1.1"
mypy = "^1.11.2"
black = "^24.8.0"
isort = "^5.13.2"
pylint = "^3.3.4"
pycodestyle = "^2.12.1"
pyflakes = "^3.2.0"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.0.0"
pytest = "^8.3.4"
coverage = "^7.6.10"
pytest-mock = "^3.14.0"
MonkeyType = "^23.3.0"
pyannotate = "^1.2.0"

[build-system]
requires = "poetry-core"
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '.git'

[tool.isort]
line_length = 119

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = 'venv'